--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy:2.4.6'
+    compile 'org.codehaus.groovy:groovy-all:2.4.6'
     compile 'org.jenkins-ci.plugins:job-dsl-core:1.48'
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude module: 'groovy-all'
